--- a/index.html
+++ b/index.html
@@ -3,32 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FSOHUB | آموزش امنیت و هک</title>
+  <title>FSOHUB | خوش آمدید</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: "Vazir", sans-serif;
+      background-color: #0f0f0f;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #1a1a1a;
+      padding: 30px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      color: #00ff99;
+      margin: 0;
+    }
+
+    .box {
+      margin: 50px auto;
+      padding: 30px;
+      background-color: #1f1f1f;
+      border: 2px solid #00ff99;
+      border-radius: 10px;
+      width: 300px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .box:hover {
+      background-color: #2a2a2a;
+    }
+
+    .box a {
+      text-decoration: none;
+      color: #ffffff;
+      font-size: 1.2em;
+      font-weight: bold;
+      display: block;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      color: #888;
+      padding: 15px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>به FSOHUB خوش آمدید</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">خانه</a></li>
-        <li><a href="kali.html">کالی لینوکس</a></li>
-        <li><a href="security.html">امنیت</a></li>
-      </ul>
-    </nav>
+    <h1>خوش آمدید به FSOHUB</h1>
   </header>
 
-  <main>
-    <section>
-      <h2>درباره FSOHUB</h2>
-      <p>ما اینجا هستیم تا مفاهیم امنیت سایبری، تست نفوذ و ابزارهای هک اخلاقی رو آموزش بدیم.</p>
-    </section>
-  </main>
+  <div class="box">
+    <a href="kali.html">آموزش کالی لینوکس</a>
+  </div>
 
   <footer>
     <p>© 2025 FSOHUB - همه حقوق محفوظ است</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
