--- a/index.html
+++ b/index.html
@@ -5,68 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FSOHUB | خوش آمدید</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: "Vazir", sans-serif;
-      background-color: #0f0f0f;
-      color: #f0f0f0;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-
-    header {
-      background-color: #1a1a1a;
-      padding: 30px;
-    }
-
-    header h1 {
-      font-size: 2.5em;
-      color: #00ff99;
-      margin: 0;
-    }
-
-    .box {
-      margin: 50px auto;
-      padding: 30px;
-      background-color: #1f1f1f;
-      border: 2px solid #00ff99;
-      border-radius: 10px;
-      width: 300px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .box:hover {
-      background-color: #2a2a2a;
-    }
-
-    .box a {
-      text-decoration: none;
-      color: #ffffff;
-      font-size: 1.2em;
-      font-weight: bold;
-      display: block;
-    }
-
-    footer {
-      background-color: #1a1a1a;
-      color: #888;
-      padding: 15px;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
 </head>
 <body>
   <header>
     <h1>خوش آمدید به FSOHUB</h1>
   </header>
 
-  <div class="box">
-    <a href="kali.html">آموزش کالی لینوکس</a>
-  </div>
+  <div class="box"><a href="kali.html">آموزش کالی لینوکس</a></div>
+  <div class="box"><a href="security.html">آموزش امنیت سایبری</a></div>
+  <div class="box"><a href="hack.html">آموزش هک اخلاقی</a></div>
 
   <footer>
     <p>© 2025 FSOHUB - همه حقوق محفوظ است</p>
