--- a/kali.html
+++ b/kali.html
@@ -2,43 +2,14 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>آموزش کالی لینوکس | FSOHUB</title>
+  <title>کالی لینوکس | FSOHUB</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>کالی لینوکس</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">خانه</a></li>
-        <li><a href="kali.html">کالی لینوکس</a></li>
-        <li><a href="security.html">امنیت</a></li>
-      </ul>
-    </nav>
-  </header>
-
+  <header><h1>کالی لینوکس</h1></header>
   <main>
-    <section>
-      <h2>کالی لینوکس چیست؟</h2>
-      <p>کالی لینوکس یک توزیع قدرتمند برای تست نفوذ و امنیت سایبری است که ابزارهای متنوعی برای هکرهای اخلاقی فراهم می‌کند.</p>
-    </section>
-
-    <section>
-      <h2>ابزارهای معروف در کالی</h2>
-      <ul>
-        <li>nmap</li>
-        <li>Wireshark</li>
-        <li>Metasploit</li>
-        <li>Burp Suite</li>
-      </ul>
-    </section>
+    <p>کالی لینوکس یک توزیع تخصصی برای تست نفوذ و امنیت سایبری است...</p>
   </main>
-
-  <footer>
-    <p>© 2025 FSOHUB - آموزش کالی لینوکس</p>
-  </footer>
-
-  <script src="script.js"></script>
+  <footer><p>© 2025 FSOHUB</p></footer>
 </body>
 </html>
