--- a/security.html
+++ b/security.html
@@ -2,43 +2,14 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>آموزش امنیت سایبری | FSOHUB</title>
+  <title>امنیت سایبری | FSOHUB</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>امنیت سایبری</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">خانه</a></li>
-        <li><a href="kali.html">کالی لینوکس</a></li>
-        <li><a href="security.html">امنیت</a></li>
-      </ul>
-    </nav>
-  </header>
-
+  <header><h1>امنیت سایبری</h1></header>
   <main>
-    <section>
-      <h2>امنیت چیست؟</h2>
-      <p>امنیت سایبری یعنی محافظت از اطلاعات، سیستم‌ها و شبکه‌ها در برابر حملات و نفوذهای مخرب.</p>
-    </section>
-
-    <section>
-      <h2>مفاهیم کلیدی</h2>
-      <ul>
-        <li>Firewall و IDS/IPS</li>
-        <li>رمزنگاری و احراز هویت</li>
-        <li>مهندسی اجتماعی</li>
-        <li>تست نفوذ و ارزیابی آسیب‌پذیری</li>
-      </ul>
-    </section>
+    <p>امنیت یعنی محافظت از اطلاعات، شبکه‌ها و سیستم‌ها در برابر تهدیدات...</p>
   </main>
-
-  <footer>
-    <p>© 2025 FSOHUB - آموزش امنیت سایبری</p>
-  </footer>
-
-  <script src="script.js"></script>
+  <footer><p>© 2025 FSOHUB</p></footer>
 </body>
 </html>
